--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">Password123</string>
     <string name="hint">Enter Password</string>
     <string name="network_warning">Low Network - Offline Check Only</string>
-    <string name="powered_by">powered by haveibeenpwned.com</string>
+    <string name="powered_by">powered by \"Have I been pwned?\"</string>
     <string name="help">Help</string>
     <string name="password_manager">If that all seems like too much effort, I don\'t blame you.
         The best solution is probably to invest in a password manager (I suspect it\'s what most
@@ -45,11 +45,14 @@
     <string name="licences">Password123 is an open source Android app written in Kotlin, the source is
         available here: https://github.com/erdo/password123 \n\n The app makes use of these third party
         libraries and services:
-        \n\n haveibeenpwned \n see: https://haveibeenpwned.com/API/v2#PwnedPasswords
+        \n\n \"Have I been pwned?\" \n see: https://haveibeenpwned.com/API/v2#PwnedPasswords
         \n\n OkHttp \n see: https://github.com/square/okhttp
         \n\n pwned4android \n see: https://github.com/erdo/pwned4android
         \n\n ASAF \n see: https://github.com/erdo/asaf-project
         \n\n icons \n see: https://material.io/icons/
     </string>
+    <string name="credits">Credits</string>
+    <string name="how_does_password123_work">How does Password123 work</string>
+
 
 </resources>
